# Cppcraft-2

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: game.cpp  game.h  main.cpp
src/graphics/: renderer.cpp  renderer.h  shader.cpp  shader.h
src/input/: input_handler.cpp  input_handler.h
src/world/: block.h  chunk.cpp  chunk.h  world.h
